# boinc

./: .gitignore  Containerfile.amd-custom  README.md  container-boinc.container  create_cvmfs_container.sh  push_to_dockerhub.sh  run_boinc.sh  run_boinc_cvmfs.sh
IdleChecker/: CMakeLists.txt  README.md  main.cpp
custom_containerfiles/: Dockerfile.cvmfs
cvmfs_container/: create_cvmfs_container.sh  default.local  run_boinc_cvmfs.sh
